--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"rimraf": "2.2.8",
 		"fs-extra": "0.12.0",
     "express": "4.10.5",
-    "socket.io": "1.2.1"
+    "socket.io": "1.2.1",
+    "uuid": "2.0.1"
   }
 }
