--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/erispa/aio/issues"
   },
   
-  "main": "index.js",
+  "main": "server/aio.js",
   "bin": {
     "aio": "bin/aio"
   },
