--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "uuid": "2.0.1",
+    "graceful-fs": "3.0.5",
     "fs-extra": "0.13.0",
     "express": "4.10.5",
-    "socket.io": "1.2.1",
-    "uuid": "2.0.1"
+    "socket.io": "1.2.1"
   },
   "engines": {
     "node": ">= 0.10.0"
