--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "uuid": "2.0.1",
     "graceful-fs": "3.0.5",
     "fs-extra": "0.13.0",
+    "walker": "1.0.6",
+    "chokidar": "0.12.3",
     "express": "4.10.5",
     "socket.io": "1.2.1"
   },
